--- a/app/index.html
+++ b/app/index.html
@@ -21,5 +21,6 @@
 	<!-- Pay no attention to the man behind the curtain! -->
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
 	<script src="../scripts/app.js"></script>
+	<script src="../scripts/grocery.js"></script>
 </body>
 </html>
