Fixed directory structure
OMG - I was more tired than I realized and had directories and files in some odd places. :-/  But it's fixed now. :-)

closes #3

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css"/>
-	<link rel="stylesheet" href="../styles/app.css"/>
+	<link rel="stylesheet" href="styles/app.css"/>
 </head>
 <body>
 	<!-- What we're going to show them and why -->
@@ -21,7 +21,7 @@
 	<!-- Pay no attention to the man behind the curtain! -->
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
 	<script src="../bower_components/Leaflet.MakiMarkers/Leaflet.MakiMarkers.js"></script>
-	<script src="../scripts/app.js"></script>
-	<script src="../scripts/grocery.js"></script>
+	<script src="scripts/app.js"></script>
+	<script src="scripts/grocery.js"></script>
 </body>
 </html>
