Map tiles are now using appropriate open sources
Now using MapQuest or Stamen map tiles; both are open source licensed.
Updated the README.md.
Reorganized code for readability and findability.

--- a/app/index.html
+++ b/app/index.html
@@ -19,11 +19,24 @@
 	<!-- Showing them -->
 	<div id="map"></div>
 
+  <p><a href="about.html">GeoQuery Colophon</a></p>
+
 	<!-- Pay no attention to the scripts behind the curtain! -->
+
+  <!-- MAP RELATED -->
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
 	<script src="../bower_components/Leaflet.MakiMarkers/Leaflet.MakiMarkers.js"></script>
+
+  <!-- map tiles from http://maps.stamen.com/  -->
+  <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.3.0"></script>
+
+  <!-- jQuery -->
 	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script src="scripts/app.js"></script>
+
+  <!-- App specific -->
+  <script src="scripts/map.js"></script>
+  <script src="scripts/data.js"></script>
 	<script src="scripts/grocery.js"></script>
+  <script src="scripts/app.js"></script>
 </body>
 </html>
